--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   width: 600px;
   margin-top: 100px;
   box-shadow: rgba(0, 0, 0, 0.8) 0px 7px 30px 0px;
+
 }
 
 .display-container {
@@ -32,6 +33,9 @@ body {
   width: 550px;
   margin-top: 20px;
   border-radius: 15px;
+
+  overflow: hidden;
+
 }
 
 .buttons-container {
@@ -50,11 +54,12 @@ body {
   width: 130px;
   margin: 0;
   background-color: rgb(58, 58, 58);
-  border: solid rgb(168, 168, 168) 2px;
+  border: solid rgb(0, 0, 0) 2px;
   border-radius: 15px;
   transition: 0.1s;
   margin-left: 25px;
   align-self: flex-start;
+  box-shadow: rgba(0, 0, 0, 1) 0px 7px 10px 0px;
 }
 .btn {
   color: rgb(210, 210, 210);
@@ -63,22 +68,22 @@ body {
   width: 130px;
   margin: 0;
   background-color: rgb(58, 58, 58);
-  border: solid rgb(168, 168, 168) 2px;
+  border: solid rgb(0, 0, 0) 2px;
   border-radius: 15px;
-  transition: 0.1s;
+  transition: 0.05s;
   margin: 5px;
+  box-shadow: rgba(0, 0, 0, 1) 0px 7px 10px 0px;
 }
 
 .btn:hover, .btn-c:hover{
-  scale: 1.02;
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 7px 20px 0px;
   color: rgb(255, 255, 255);
 }
 
 .btn:active, .btn-c:active {
-  opacity: 0.6;
-  scale: 1;
+  opacity: 0.9;
+  scale: 0.99;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 7px 20px 0px;
 }
 
 .display-text {
