--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ h1, h2, h3, p, button {
   font-family: Roboto, arial;
 }
 
+@font-face {
+  font-family: 'digital-7';
+  src: url('digital-7.ttf');
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -35,7 +40,10 @@ body {
   border-radius: 15px;
 
   overflow: hidden;
+}
 
+.display-container > p {
+  font-family: 'digital-7';
 }
 
 .buttons-container {
@@ -88,6 +96,6 @@ body {
 
 .display-text {
   color: white;
-  font-size: 80px;
+  font-size: 120px;
   margin-right: 20px;
 }
