--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   width: 550px;
   margin-top: 20px;
   border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.8) 0px -10px 5px 0px;
 
   overflow: hidden;
 }
