--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
   background-color: rgb(86, 100, 139);
 }
 
@@ -24,7 +25,6 @@ body {
   border-radius: 15px;
   height: 600px;
   width: 390px;
-  margin-top: 100px;
   box-shadow: rgba(0, 0, 0, 0.8) 0px 7px 30px 0px;
 
 }
